Herokuの環境変数を利用できるように修正

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "えくすたーなるとぅいったー",
-  "description": "外部からツイッターを簡単操作するアプリケーションです",
+  "description": "ツイッター認証を利用し、外部からツイッターを簡単操作するアプリケーションです",
   "logo": "",
   "keywords": [
     "node"
